--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -8,8 +8,31 @@
 <body>
 <h1>My Super Fancy Spa</h1>
 <div id = "clientProfile">
+    <h2>My Profile</h2>
+    <p th:text = "${name}">Name</p>
+    <p th:text = "${skintype}">Skin Type</p>
+    <p th:text = "${manipedi}">Mani Pedi</p>
 </div>
 <div id = "servicesMenu">
+    <h2>Menu of Available Services</h2>
+    <h3>Facial Treatments</h3>
+    <p>
+        <span>The facial treatments below are recommended</span><br>
+        <span>by our estheticians for your given skin type.</span>
+    </p>
+    <table>
+        <tr th:each="facial : ${appropriateFacials}">
+            <td th:text="${facial}"></td>
+        </tr>
+    </table>
+    <div th:if="${manipedi.equals('manicure')}">
+        <h3>Manicure</h3>
+        <p th:replace="fragments :: manicureDescription"></p>
+    </div>
+    <div th:if="${manipedi.equals('pedicure')}">
+        <h3>Pedicure</h3>
+        <p th:replace="fragments :: pedicureDescription"></p>
+    </div>
 </div>
 </body>
 </html>
